--- a/JS-Assignment1/insert integer(9)/index.html
+++ b/JS-Assignment1/insert integer(9)/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Even or Odd Checker</title>
+    <title>Number Sequence Printer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Even or Odd Checker</h1>
+        <h1>Number Sequence Printer</h1>
         <input type="number" id="numberInput" placeholder="Enter an integer number">
-        <button onclick="checkEvenOdd()">Check Number</button>
+        <button onclick="printNumbers()">Print Numbers</button>
         <div id="result"></div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
