--- a/JS-Assignment1/Vowel or Consonant Checker(16)/index.html
+++ b/JS-Assignment1/Vowel or Consonant Checker(16)/index.html
@@ -11,11 +11,12 @@
 <body>
     <div class="container">
         <h1>Vowel or Consonant Checker</h1>
-        <input type="text" id="charInput" maxlength="1" placeholder="Enter a character">
-        <button onclick="checkVowelOrConsonant()">Check Character</button>
+        <label for="alphabetInput">Enter an Alphabet:</label>
+        <input type="text" id="alphabetInput" placeholder="Enter alphabet">
+        <button onclick="checkVowelOrConsonant()">Check</button>
         <div id="result"></div>
     </div>
-    <script src="./main.js"></script>
+    <script src="./script.je"></script>
 </body>
 
 </html>
