--- a/JS-Assignment1/Even or Odd Checker(18)/index.html
+++ b/JS-Assignment1/Even or Odd Checker(18)/index.html
@@ -11,11 +11,12 @@
 <body>
     <div class="container">
         <h1>Even or Odd Checker</h1>
-        <input type="number" id="numberInput" placeholder="Enter an integer number">
-        <button onclick="checkEvenOdd()">Check Number</button>
+        <label for="numberInput">Enter a Number:</label>
+        <input type="number" id="numberInput" placeholder="Enter number">
+        <button onclick="checkEvenOrOdd()">Check</button>
         <div id="result"></div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
